[ci skip] Add perfect line to the binned residual plot 1ac72ac9ef2ef8e0837ca933b78bee5b98b67099

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "486b89aa",
+   "id": "b422cb21",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039ab9fb",
+   "id": "d91d6f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7469051",
+   "id": "d4ce2e69",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b72f3eab",
+   "id": "9b3781d1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e41e20",
+   "id": "6075e51b",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7e3b35a",
+   "id": "715a7e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57e25f0b",
+   "id": "59930fb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a889708",
+   "id": "fac6f45e",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03053454",
+   "id": "8357c101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8630e751",
+   "id": "358e9605",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8dab570",
+   "id": "0d6ff008",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a88cd5",
+   "id": "87a0fca4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42d12e90",
+   "id": "ffbe251f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f42bc97",
+   "id": "11c44e7a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ead1c3ba",
+   "id": "fb44c52f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45628f42",
+   "id": "9f2fa563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4f29cff",
+   "id": "23fd0ed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d97eab05",
+   "id": "f9a58f55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9331821",
+   "id": "8bd6a254",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59bb4161",
+   "id": "51c12bc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98cdb35c",
+   "id": "e94ec4ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3036470b",
+   "id": "970af615",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b77e04",
+   "id": "64d3566c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfdf7003",
+   "id": "23b13689",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f247c10b",
+   "id": "c1254bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd9241f",
+   "id": "b40056eb",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676d40d5",
+   "id": "bc552262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682e000c",
+   "id": "2debc05e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ef0e69",
+   "id": "e8fbf97a",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dfc9446",
+   "id": "f5883646",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac2b926",
+   "id": "456e9874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac7eb6eb",
+   "id": "70044770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4356d7c9",
+   "id": "a37722e3",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dae2864e",
+   "id": "3b78a6cb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0f7eda",
+   "id": "dbc5d821",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb627a1",
+   "id": "1cf541a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81504b63",
+   "id": "5705a936",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "146fce68",
+   "id": "ad3ac5d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9646ed92",
+   "id": "2df11a0c",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40545d46",
+   "id": "cc38d727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f6b636",
+   "id": "80be4124",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e27bf65",
+   "id": "743a5dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea5552c",
+   "id": "884e94ea",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d54226",
+   "id": "6f1f567a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d55d9ded",
+   "id": "6e01cef4",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "297e4722",
+   "id": "6039ac5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a6b7b3b",
+   "id": "5a2e61cf",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa72ee1d",
+   "id": "380d2c22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66d288a3",
+   "id": "d5e835f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f59978bb",
+   "id": "2e3374b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ea0cee",
+   "id": "7ce00a80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36d442a2",
+   "id": "f491fee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad172e9",
+   "id": "f179e798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b324a032",
+   "id": "c9863cfa",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1311,6 +1311,7 @@
     "\n",
     "    all_iqr_bands = []\n",
     "    all_mean_lines = []\n",
+    "    time_range = None  # Will store the min/max time values for the perfect line\n",
     "\n",
     "    for i, cv_prediction in enumerate(cv_predictions):\n",
     "        # Get date range for this CV fold\n",
@@ -1340,6 +1341,17 @@
     "            .with_columns(pl.lit(fold_label).alias(\"fold\"))\n",
     "        )\n",
     "\n",
+    "        # Store time range for perfect line (use the first CV fold)\n",
+    "        if time_range is None:\n",
+    "            time_range = (\n",
+    "                residuals_stats[time_column].min(),\n",
+    "                residuals_stats[time_column].max(),\n",
+    "            )\n",
+    "        else:\n",
+    "            time_range = (\n",
+    "                min(time_range[0], residuals_stats[time_column].min()),\n",
+    "                max(time_range[1], residuals_stats[time_column].max()),\n",
+    "            )\n",
     "        # Create IQR band for this CV fold\n",
     "        iqr_band = (\n",
     "            altair.Chart(residuals_stats)\n",
@@ -1366,6 +1378,29 @@
     "        all_iqr_bands.append(iqr_band)\n",
     "        all_mean_lines.append(mean_line)\n",
     "\n",
+    "    # Create perfect residuals line at y=0\n",
+    "    perfect_line = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    time_column: [time_range[0], time_range[1]],\n",
+    "                    \"perfect_residual\": [0, 0],\n",
+    "                    \"label\": [\"Perfect\"] * 2,\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(strokeDash=[5, 5], opacity=0.8, color=\"black\")\n",
+    "        .encode(\n",
+    "            x=altair.X(f\"{time_column}:O\", title=x_title),\n",
+    "            y=altair.Y(\"perfect_residual:Q\", title=\"Mean residual (MW)\"),\n",
+    "            color=altair.Color(\n",
+    "                \"label:N\",\n",
+    "                scale=altair.Scale(range=[\"black\"]),\n",
+    "                legend=None,\n",
+    "            ),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
     "    # Combine all IQR bands\n",
     "    combined_iqr = all_iqr_bands[0]\n",
     "    for band in all_iqr_bands[1:]:\n",
@@ -1376,8 +1411,10 @@
     "    for line in all_mean_lines[1:]:\n",
     "        combined_lines += line\n",
     "\n",
-    "    # Layer the IQR bands behind the mean lines\n",
-    "    return (combined_iqr + combined_lines).resolve_scale(color=\"independent\")\n",
+    "    # Layer the IQR bands behind the mean lines, with perfect line on top\n",
+    "    return (combined_iqr + combined_lines + perfect_line).resolve_scale(\n",
+    "        color=\"independent\"\n",
+    "    )\n",
     "\n",
     "\n",
     "plot_binned_residuals(cv_predictions, by=\"hour\").interactive().properties(\n",
@@ -1388,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45a0b1b",
+   "id": "c83a17da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175ec2cf",
+   "id": "63e56375",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1422,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc1efc4d",
+   "id": "f0361d2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61416b7b",
+   "id": "94f5fd9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d9deb94",
+   "id": "38e3e5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69163c7",
+   "id": "4ea39a06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbcc6dcb",
+   "id": "30813ec4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2633bb78",
+   "id": "640a135d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a16fa79c",
+   "id": "e79497e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9616a5",
+   "id": "0a0f2846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e1a0637",
+   "id": "61194526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dc2e1e8",
+   "id": "1874b2f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42a50783",
+   "id": "d2949b77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc806594",
+   "id": "03119df8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f7888de",
+   "id": "53fbf991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba155ba",
+   "id": "8a52d535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1642,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32ebe6e",
+   "id": "f97f4481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1658,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec5f39e",
+   "id": "bcf66288",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d957781b",
+   "id": "3a5c38f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1738,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101d36be",
+   "id": "b714f7f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "079b26c2",
+   "id": "fb5afacc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df74ce6d",
+   "id": "919949c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99de97a",
+   "id": "4447e4f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0551531",
+   "id": "5ed34822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1856,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48ba7d1d",
+   "id": "c98d9701",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46dfc87e",
+   "id": "810855b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab7ee2be",
+   "id": "4e211617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b66013f2",
+   "id": "b022a4f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1907,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b904c286",
+   "id": "435c5e7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +1954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e73f1d73",
+   "id": "517fc7a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +1999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64cf8eb4",
+   "id": "f753170f",
    "metadata": {},
    "outputs": [],
    "source": []
