--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a6ebb94f",
+   "id": "e81f9621",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f6d1871",
+   "id": "061ef961",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52d48947",
+   "id": "ba7231c2",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffe32f33",
+   "id": "3b0c0c39",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "736f0e84",
+   "id": "ca8932e4",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1775961",
+   "id": "bece925b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f54c646",
+   "id": "59adc7e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d90aa991",
+   "id": "a6d915ab",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "801868c3",
+   "id": "66affa76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2532a0c",
+   "id": "cdaf545b",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad315ebe",
+   "id": "8ec2ea5b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821e84d9",
+   "id": "e637b802",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02df95d8",
+   "id": "f8927244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78803bf3",
+   "id": "228e7f28",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "884c3b6b",
+   "id": "949636b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43c2d156",
+   "id": "c2abed17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06aa35fb",
+   "id": "812ebebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e21eec1",
+   "id": "493c3247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5967fb8",
+   "id": "6b26015e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28cf92f",
+   "id": "10384148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5a618b0",
+   "id": "82eb2829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7aed447",
+   "id": "8dd3d7d3",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a8a046c",
+   "id": "a8e2ccc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e40f22d",
+   "id": "a83d0dff",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae8000e",
+   "id": "7aabcb4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697c9792",
+   "id": "fa66839c",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779caf39",
+   "id": "4ec8c9d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44f65630",
+   "id": "c541b0bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ff6c557",
+   "id": "2774a8fa",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a10012ff",
+   "id": "7f0e7c8b",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36984e33",
+   "id": "6ac1f9dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402fd8e8",
+   "id": "3c64b8ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57af60b2",
+   "id": "a1eada4d",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61c12fc3",
+   "id": "d7ec7822",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde88a9a",
+   "id": "ed350368",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f602aad",
+   "id": "1fdc9d4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bf6cc3a",
+   "id": "67f83316",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d292de42",
+   "id": "83ef1b3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7c8ae1b",
+   "id": "3ed00ef6",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bcbbb9c",
+   "id": "5bfbaf33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f7daf4",
+   "id": "4283e65b",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b339ee25",
+   "id": "a5a5cd41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf34725d",
+   "id": "034c42b2",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b279604",
+   "id": "2553e34d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d21b6ac",
+   "id": "2c61dd84",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae4c43f",
+   "id": "3ce8e73b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0448be0",
+   "id": "ef90a8c6",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2914bff5",
+   "id": "6e5f56c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17bbe6a4",
+   "id": "992905a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e607263d",
+   "id": "01174edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d842ff01",
+   "id": "0676fb97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb308ca",
+   "id": "4a82f491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8716507f",
+   "id": "b47eed3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c80c35",
+   "id": "74b437bd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1311,6 +1311,7 @@
     "\n",
     "    all_iqr_bands = []\n",
     "    all_mean_lines = []\n",
+    "    time_range = None  # Will store the min/max time values for the perfect line\n",
     "\n",
     "    for i, cv_prediction in enumerate(cv_predictions):\n",
     "        # Get date range for this CV fold\n",
@@ -1340,6 +1341,17 @@
     "            .with_columns(pl.lit(fold_label).alias(\"fold\"))\n",
     "        )\n",
     "\n",
+    "        # Store time range for perfect line (use the first CV fold)\n",
+    "        if time_range is None:\n",
+    "            time_range = (\n",
+    "                residuals_stats[time_column].min(),\n",
+    "                residuals_stats[time_column].max(),\n",
+    "            )\n",
+    "        else:\n",
+    "            time_range = (\n",
+    "                min(time_range[0], residuals_stats[time_column].min()),\n",
+    "                max(time_range[1], residuals_stats[time_column].max()),\n",
+    "            )\n",
     "        # Create IQR band for this CV fold\n",
     "        iqr_band = (\n",
     "            altair.Chart(residuals_stats)\n",
@@ -1366,6 +1378,29 @@
     "        all_iqr_bands.append(iqr_band)\n",
     "        all_mean_lines.append(mean_line)\n",
     "\n",
+    "    # Create perfect residuals line at y=0\n",
+    "    perfect_line = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    time_column: [time_range[0], time_range[1]],\n",
+    "                    \"perfect_residual\": [0, 0],\n",
+    "                    \"label\": [\"Perfect\"] * 2,\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(strokeDash=[5, 5], opacity=0.8, color=\"black\")\n",
+    "        .encode(\n",
+    "            x=altair.X(f\"{time_column}:O\", title=x_title),\n",
+    "            y=altair.Y(\"perfect_residual:Q\", title=\"Mean residual (MW)\"),\n",
+    "            color=altair.Color(\n",
+    "                \"label:N\",\n",
+    "                scale=altair.Scale(range=[\"black\"]),\n",
+    "                legend=None,\n",
+    "            ),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
     "    # Combine all IQR bands\n",
     "    combined_iqr = all_iqr_bands[0]\n",
     "    for band in all_iqr_bands[1:]:\n",
@@ -1376,8 +1411,10 @@
     "    for line in all_mean_lines[1:]:\n",
     "        combined_lines += line\n",
     "\n",
-    "    # Layer the IQR bands behind the mean lines\n",
-    "    return (combined_iqr + combined_lines).resolve_scale(color=\"independent\")\n",
+    "    # Layer the IQR bands behind the mean lines, with perfect line on top\n",
+    "    return (combined_iqr + combined_lines + perfect_line).resolve_scale(\n",
+    "        color=\"independent\"\n",
+    "    )\n",
     "\n",
     "\n",
     "plot_binned_residuals(cv_predictions, by=\"hour\").interactive().properties(\n",
@@ -1388,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7edcfe96",
+   "id": "e8e9db38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7fe7866",
+   "id": "ff290759",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1422,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2586e240",
+   "id": "b731cf9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb6755a7",
+   "id": "79078721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7946fac6",
+   "id": "c1753998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a88411fb",
+   "id": "fb949756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23cbb9f0",
+   "id": "609fff23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dada0837",
+   "id": "1fc087bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6485fe83",
+   "id": "892fc73c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c03a043",
+   "id": "3dfc18e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "496a79bb",
+   "id": "a17ee7d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8844083f",
+   "id": "5e386734",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b8bef73",
+   "id": "12c2de2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dce5eafc",
+   "id": "faa40011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "733b7c23",
+   "id": "0f24bcc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5012aa8c",
+   "id": "2c2f5086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1642,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ea6927c",
+   "id": "ea609e32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1658,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfded14f",
+   "id": "6b09a061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86bac14b",
+   "id": "d53591af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1738,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6d084f",
+   "id": "8d0a1ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "608e3027",
+   "id": "8557674f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4512410",
+   "id": "01f8ec44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6efb1125",
+   "id": "503fcb24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b798e43",
+   "id": "cdefc9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1856,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c62b191c",
+   "id": "28ceefc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "298cb27d",
+   "id": "2308f674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b681b3cb",
+   "id": "b06400b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c86bc64e",
+   "id": "bbf463b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1907,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc6e377e",
+   "id": "c0f16f34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +1954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "737a65a7",
+   "id": "6fa601a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +1999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aba6b51",
+   "id": "3656717c",
    "metadata": {},
    "outputs": [],
    "source": []
